start using new build tools and repos

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,14 +17,14 @@ VERSION_NAME=2.3.0
 VERSION_CODE=64
 
 MIN_SDK=21
-TARGET_SDK=O
+TARGET_SDK=25
 COMPILE_SDK=android-O
 USE_JACK=false
 
-ANDROID_GRADLE_VERSION=2.4.0-alpha4
-BUILD_TOOLS_VERSION=26.0.0-rc1
-ANDROID_SUPPORT_VERSION=26.0.0-alpha1
+ANDROID_GRADLE_VERSION=3.0.0-alpha1
+BUILD_TOOLS_VERSION=26.0.0-rc2
+ANDROID_SUPPORT_VERSION=26.0.0-beta1
 WEARABLE_SUPPORT_VERSION=2.0.0
 
-FIREBASE_VERSION=10.2.0
-GOOGLE_PLAY_SERVICES_VERSION=10.2.0
+FIREBASE_VERSION=10.2.6
+GOOGLE_PLAY_SERVICES_VERSION=10.2.6
