--- a/build.gradle
+++ b/build.gradle
@@ -16,19 +16,20 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_VERSION"
-        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.google.gms:google-services:3.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.5.0'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
         mavenCentral()
         maven { url "https://dl.bintray.com/drummer-aidan/maven" }
