comment it out, for now

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -137,10 +137,10 @@
             android:exported="true"
             android:taskAffinity="com.klinker.android.messaging.MMS_RECEIVED" >
 
-            <intent-filter
-                android:priority="2147483647">
-                <action android:name="android.provider.Telephony.MMS_DOWNLOADED" />
-            </intent-filter>
+            <!--<intent-filter-->
+                <!--android:priority="2147483647">-->
+                <!--<action android:name="android.provider.Telephony.MMS_DOWNLOADED" />-->
+            <!--</intent-filter>-->
 
         </receiver>
 
