--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -94,15 +94,15 @@
             android:permission="android.permission.BROADCAST_SMS"
             android:exported="true">
 
-            <!--<intent-filter
-                android:priority="2147483647">
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>-->
-
             <intent-filter
                 android:priority="2147483647">
-                <action android:name="android.provider.Telephony.SMS_DELIVER" />
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
+
+            <!--<intent-filter-->
+                <!--android:priority="2147483647">-->
+                <!--<action android:name="android.provider.Telephony.SMS_DELIVER" />-->
+            <!--</intent-filter>-->
         </receiver>
 
         <receiver
