go back to the 2.3.1 android gradle driver to fix build issues with alpha

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ TARGET_SDK=25
 COMPILE_SDK=android-O
 USE_JACK=false
 
-ANDROID_GRADLE_VERSION=3.0.0-alpha1
+ANDROID_GRADLE_VERSION=2.3.1
 BUILD_TOOLS_VERSION=26.0.0-rc2
 ANDROID_SUPPORT_VERSION=26.0.0-beta1
 WEARABLE_SUPPORT_VERSION=2.0.0
