add app category

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
     <uses-feature android:name="android.hardware.screen.portrait" android:required="false"/>
     <uses-feature android:name="android.hardware.screen.landscape" android:required="false"/>
 
-    <application>
+    <application
+        android:appCategory="messaging">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
