--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,9 @@
             android:name=".activity.MessengerActivity"
             android:configChanges="keyboardHidden"
             android:launchMode="singleTop"
-            android:theme="@style/PulseTheme.MessengerActivity">
+            android:theme="@style/PulseTheme.MessengerActivity"
+            android:resizeableActivity="true"
+            android:supportsPictureInPicture="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
