--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
     <application
         android:name=".MessengerApplication"
         android:allowBackup="false"
-        android:icon="@drawable/launcher_icon"
+        android:icon="@mipmap/ic_launcher"
         android:banner="@drawable/ic_banner"
         android:hardwareAccelerated="true"
         android:label="@string/app_name"
