--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -37,25 +37,46 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <uses-feature android:name="android.hardware.camera" android:required="false"/>
-    <uses-feature android:name="android.hardware.microphone" android:required="false"/>
-    <uses-feature android:name="android.hardware.telephony" android:required="false"/>
-    <uses-feature android:name="android.hardware.location" android:required="false" />
-    <uses-feature android:name="android.hardware.location.network" android:required="false" />
-    <uses-feature android:name="android.hardware.location.gps" android:required="false"/>
-    <uses-feature android:name="android.software.leanback" android:required="false" />
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-    <uses-feature android:name="android.software.app_widget" android:required="false"/>
-    <uses-feature android:name="android.hardware.screen.portrait" android:required="false"/>
-    <uses-feature android:name="android.hardware.screen.landscape" android:required="false"/>
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.microphone"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.network"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.location.gps"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.leanback"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+    <uses-feature
+        android:name="android.software.app_widget"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.screen.portrait"
+        android:required="false" />
+    <uses-feature
+        android:name="android.hardware.screen.landscape"
+        android:required="false" />
 
-    <application
-        android:appCategory="social">
+    <application android:appCategory="social">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -64,12 +85,12 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
-        
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBg-de2pZC1JTdIEidArhOpSRs_AmxNomY"/>
+            android:value="AIzaSyBg-de2pZC1JTdIEidArhOpSRs_AmxNomY" />
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -92,23 +113,22 @@
 
         <receiver
             android:name=".receiver.SmsReceivedReceiver"
-            android:permission="android.permission.BROADCAST_SMS"
-            android:exported="true">
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
 
             <!--<intent-filter-->
-                <!--android:priority="2147483647">-->
-                <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
+            <!--android:priority="2147483647">-->
+            <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
             <!--</intent-filter>-->
 
-            <intent-filter
-                android:priority="2147483647">
+            <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
             </intent-filter>
         </receiver>
 
         <!--<receiver android:name=".receiver.SmsDeliverReceiver"-->
-            <!--android:permission="android.permission.BROADCAST_SMS"-->
-            <!--android:exported="true">-->
+        <!--android:permission="android.permission.BROADCAST_SMS"-->
+        <!--android:exported="true">-->
 
         <!--</receiver>-->
 
@@ -124,11 +144,11 @@
 
         <receiver
             android:name="com.android.mms.transaction.PushReceiver"
-            android:permission="android.permission.BROADCAST_WAP_PUSH"
-            android:exported="true">
-            <intent-filter
-                android:priority="2147483647" >
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_WAP_PUSH">
+            <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.WAP_PUSH_DELIVER" />
+
                 <data android:mimeType="application/vnd.wap.mms-message" />
                 <data android:mimeType="application/vnd.wap.sic" />
             </intent-filter>
@@ -137,16 +157,16 @@
         <receiver
             android:name=".receiver.MmsSentReceiver"
             android:exported="true"
-            android:taskAffinity="com.klinker.android.messaging.MMS_SENT"/>
+            android:taskAffinity="com.klinker.android.messaging.MMS_SENT" />
 
         <receiver
             android:name=".receiver.MmsReceivedReceiver"
             android:exported="true"
-            android:taskAffinity="com.klinker.android.messaging.MMS_RECEIVED" >
+            android:taskAffinity="com.klinker.android.messaging.MMS_RECEIVED">
 
             <!--<intent-filter-->
-                <!--android:priority="2147483647">-->
-                <!--<action android:name="android.provider.Telephony.MMS_DOWNLOADED" />-->
+            <!--android:priority="2147483647">-->
+            <!--<action android:name="android.provider.Telephony.MMS_DOWNLOADED" />-->
             <!--</intent-filter>-->
 
         </receiver>
@@ -157,10 +177,12 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".receiver.NotificationDismissedReceiver"
+        <receiver
+            android:name=".receiver.NotificationDismissedReceiver"
             android:exported="false" />
 
-        <receiver android:name=".receiver.CarReplyReceiver"
+        <receiver
+            android:name=".receiver.CarReplyReceiver"
             android:exported="false" />
 
         <service
@@ -178,26 +200,48 @@
             </intent-filter>
         </service>
 
-        <service android:name=".service.DashclockExtension"
+        <service
+            android:name=".service.DashclockExtension"
             android:icon="@drawable/ic_stat_notify_group"
             android:label="@string/app_name"
             android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA">
             <intent-filter>
                 <action android:name="com.google.android.apps.dashclock.Extension" />
             </intent-filter>
-            <meta-data android:name="protocolVersion" android:value="2" />
-            <meta-data android:name="worldReadable" android:value="true" />
+
+            <meta-data
+                android:name="protocolVersion"
+                android:value="2" />
+            <meta-data
+                android:name="worldReadable"
+                android:value="true" />
         </service>
 
 
-        <service android:name=".service.jobs.CleanupOldMessagesJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.RepeatNotificationJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.ContentObserverRunCheckJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.ContactSyncJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.ScheduledMessageJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.SubscriptionExpirationCheckJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.SignoutJob" android:permission="android.permission.BIND_JOB_SERVICE" />
-        <service android:name=".service.jobs.ContentObserverJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.CleanupOldMessagesJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.RepeatNotificationJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.ContentObserverRunCheckJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.ContactSyncJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.ScheduledMessageJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.SubscriptionExpirationCheckJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.SignoutJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.ContentObserverJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
@@ -216,6 +260,7 @@
         <service android:name=".service.NewMessagesCheckService" />
         <service android:name=".service.FirebaseResetService" />
         <service android:name=".service.ResendFailedMessage" />
+        <service android:name=".service.CreateNotificationChannelService" />
 
         <service
             android:name=".service.ComposeTileService"
@@ -223,8 +268,7 @@
             android:label="@string/shortcut_compose_short"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <intent-filter>
-                <action
-                    android:name="android.service.quicksettings.action.QS_TILE"/>
+                <action android:name="android.service.quicksettings.action.QS_TILE" />
             </intent-filter>
         </service>
 
