--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,7 @@ TARGET_SDK=25
 COMPILE_SDK=25
 USE_JACK=false
 
+KOTLIN_VERSION=1.1.2-4
 ANDROID_GRADLE_VERSION=2.3.1
 BUILD_TOOLS_VERSION=25.0.2
 ANDROID_SUPPORT_VERSION=25.3.1
