--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'
 
 def propsFile = rootProject.file('keystore.properties')
