--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -79,6 +79,7 @@ android {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:${KOTLIN_VERSION}"
 
+    //noinspection GradleCompatible
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-v13:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
@@ -97,12 +98,12 @@ dependencies {
 
     compile 'com.klinkerapps:android-smsmms:4.0.1'
     compile 'com.klinkerapps:link_builder:1.5.2'
-    compile 'com.klinkerapps:android-chips:1.1.2@aar'
+    compile 'com.klinkerapps:android-chips:1.1.3@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
     compile 'com.klinkerapps:article_viewer:0.22.4'
     compile 'com.klinkerapps:giphy:1.0.3'
 
-    compile 'com.github.paolorotolo:appintro:4.0.0'
+    compile 'com.github.apl-devs:appintro:v4.2.0'
     compile 'com.yalantis:ucrop:2.2.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
