--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -118,10 +118,10 @@
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
 
-            <!--<intent-filter-->
-            <!--android:priority="2147483647">-->
-            <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
-            <!--</intent-filter>-->
+            <intent-filter
+            android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
 
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
@@ -136,10 +136,12 @@
 
         <receiver
             android:name=".receiver.SmsSentReceiver"
+            android:exported="true"
             android:taskAffinity="${applicationId}.SMS_SENT" />
 
         <receiver
             android:name=".receiver.SmsDeliveredReceiver"
+            android:exported="true"
             android:taskAffinity="${applicationId}.SMS_DELIVERED" />
 
         <receiver
@@ -156,10 +158,12 @@
 
         <receiver
             android:name=".receiver.MmsSentReceiver"
+            android:exported="true"
             android:taskAffinity="com.klinker.android.messaging.MMS_SENT" />
 
         <receiver
             android:name=".receiver.MmsReceivedReceiver"
+            android:exported="true"
             android:taskAffinity="com.klinker.android.messaging.MMS_RECEIVED">
 
             <!--<intent-filter-->
