update release description

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -118,10 +118,10 @@
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
 
-            <intent-filter
-            android:priority="2147483647">
-                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-            </intent-filter>
+            <!--<intent-filter-->
+            <!--android:priority="2147483647">-->
+                <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
+            <!--</intent-filter>-->
 
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
