--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -112,7 +112,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
     compile 'com.afollestad:easyvideoplayer:0.3.0'
-    compile 'com.afollestad:material-camera:0.4.4'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.larswerkman:lobsterpicker:1.0.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
@@ -120,12 +119,14 @@ dependencies {
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
     compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.github.codekidX:storage-chooser:1.0.30'
+    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
 
     compile project(":api_implementation")
     compile project(":encryption")
 
     compile(name: 'sofa', ext: 'aar')
     compile(name: 'material-scrollbar', ext: 'aar')
+    compile(name: 'material-camera', ext: 'aar')
 
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.3.2"
