--- a/gradle.properties
+++ b/gradle.properties
@@ -21,11 +21,11 @@ TARGET_SDK=26
 COMPILE_SDK=26
 USE_JACK=false
 
-KOTLIN_VERSION=1.1.2-4
+KOTLIN_VERSION=1.1.3
 ANDROID_GRADLE_VERSION=2.3.1
 BUILD_TOOLS_VERSION=26.0.0-rc2
 ANDROID_SUPPORT_VERSION=26.0.0-beta2
 WEARABLE_SUPPORT_VERSION=2.0.2
 
-FIREBASE_VERSION=10.2.6
-GOOGLE_PLAY_SERVICES_VERSION=10.2.6
+FIREBASE_VERSION=11.0.0
+GOOGLE_PLAY_SERVICES_VERSION=11.0.0
