--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -125,14 +125,21 @@
             android:exported="true"
             android:permission="android.permission.BROADCAST_SMS">
 
-            <!--<intent-filter-->
-            <!--android:priority="2147483647">-->
-            <!--<action android:name="android.provider.Telephony.SMS_RECEIVED" />-->
-            <!--</intent-filter>-->
-
             <intent-filter android:priority="2147483647">
                 <action android:name="android.provider.Telephony.SMS_DELIVER" />
             </intent-filter>
+
+        </receiver>
+
+        <receiver
+            android:name=".receiver.SmsReceivedNonDefaultReceiver"
+            android:exported="true"
+            android:permission="android.permission.BROADCAST_SMS">
+
+            <intent-filter android:priority="2147483647">
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+
         </receiver>
 
         <!--<receiver android:name=".receiver.SmsDeliverReceiver"-->
