--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -116,7 +116,8 @@
 
         <activity
             android:name=".activity.MessengerTvActivity"
-            android:theme="@style/AppTheme.Leanback">
+            android:theme="@style/AppTheme.Leanback"
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
