--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -154,6 +154,10 @@
             android:taskAffinity="${applicationId}.SMS_SENT" />
 
         <receiver
+            android:name=".receiver.SmsSentReceiverNoRetry"
+            android:exported="true" />
+
+        <receiver
             android:name=".receiver.SmsDeliveredReceiver"
             android:exported="true"
             android:taskAffinity="${applicationId}.SMS_DELIVERED" />
