fallback for messages not getting marked as sent correctly

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -262,6 +262,9 @@
         <service
             android:name=".service.jobs.ContentObserverJob"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service
+            android:name=".service.jobs.MarkAsReadJob"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
