--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,6 +123,7 @@ dependencies {
     testCompile 'org.powermock:powermock-api-mockito:1.6.1'
     testCompile 'org.powermock:powermock-classloading-xstream:1.6.0'
     testCompile 'org.apache.maven:maven-ant-tasks:2.1.3'
+    testCompile project(path: ':encryption')
 }
 
 apply plugin: 'com.google.gms.google-services'
