focus on the text entry when entering the compose screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -130,7 +130,7 @@
             android:name=".activity.ComposeActivity"
             android:exported="true"
             android:theme="@style/PulseTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan" >
+            android:windowSoftInputMode="adjustResize" >
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
