--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -276,6 +276,7 @@
         <service android:name=".service.FirebaseResetService" />
         <service android:name=".service.ResendFailedMessage" />
         <service android:name=".service.CreateNotificationChannelService" />
+        <service android:name=".service.ContactResyncService" />
 
         <service
             android:name=".service.ComposeTileService"
