handle long message threads: - limit conversations to the latest 8000 messages - if there is more than that, put a button in the conversation information page to view the full conversation - start up a new activity to display the MessageListFragment that doesn't have a message limit - All the messages are still searchable and the quick find by date will be fine on the message list without the limit.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,6 +168,9 @@
             android:launchMode="singleTask"/>
 
         <activity
+            android:name=".activity.NoLimitMessageListActivity"
+            android:theme="@style/PulseTheme.NoActionBar" />
+        <activity
             android:name=".shared.util.RedirectToMyAccount"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity
