some fixes for the new optimizations around extremely large message threads

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ TARGET_SDK=26
 COMPILE_SDK=26
 USE_JACK=false
 
-KOTLIN_VERSION=1.1.3
+KOTLIN_VERSION=1.1.4-3
 ANDROID_GRADLE_VERSION=2.3.1
 BUILD_TOOLS_VERSION=26.0.1
 ANDROID_SUPPORT_VERSION=26.0.1
