--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,9 @@ android {
 dependencies {
     compile project(":shared")
 
+    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
+    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.4.2"
     testCompile 'org.mockito:mockito-all:1.10.8'
