--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,8 @@ KOTLIN_VERSION=1.1.4-3
 ANDROID_GRADLE_VERSION=2.3.1
 BUILD_TOOLS_VERSION=26.0.1
 ANDROID_SUPPORT_VERSION=26.0.1
-WEARABLE_SUPPORT_VERSION=2.0.3
+WEARABLE_SUPPORT_VERSION=2.0.4
+GLIDE_VERSION=4.0.0
 
 FIREBASE_VERSION=11.2.0
 GOOGLE_PLAY_SERVICES_VERSION=11.2.0
