--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -81,10 +81,12 @@ android {
 }
 
 dependencies {
+
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:${KOTLIN_VERSION}"
 
     //noinspection GradleCompatible
     compile "com.android.support:appcompat-v7:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:support-v4:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-v13:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-emoji:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:support-annotations:${ANDROID_SUPPORT_VERSION}"
@@ -101,6 +103,9 @@ dependencies {
     compile "com.google.firebase:firebase-crash:${FIREBASE_VERSION}"
     compile "com.google.android.gms:play-services-maps:${GOOGLE_PLAY_SERVICES_VERSION}"
 
+    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
+    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+
     compile 'com.klinkerapps:android-smsmms:4.2.2'
     compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.klinkerapps:android-chips:1.1.3@aar'
@@ -113,7 +118,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
     compile 'com.afollestad:easyvideoplayer:0.3.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.larswerkman:lobsterpicker:1.0.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile 'me.leolin:ShortcutBadger:1.1.14@aar'
