--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,8 +20,8 @@ targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
 dependencies {
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
 
     testCompile 'junit:junit:4.12'
 }
