--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -60,9 +60,12 @@ dependencies {
     compile project(":api")
     compile project(":encryption")
 
-    compile "com.android.support:design:${ANDROID_SUPPORT_VERSION}"
-    compile "com.google.firebase:firebase-core:${FIREBASE_VERSION}"
-    compile "com.google.firebase:firebase-messaging:${FIREBASE_VERSION}"
-    compile "com.google.firebase:firebase-storage:${FIREBASE_VERSION}"
-    compile "com.google.firebase:firebase-auth:${FIREBASE_VERSION}"
+    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+
+    compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
+    compile "com.google.firebase:firebase-core:$FIREBASE_VERSION"
+    compile "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
+    compile "com.google.firebase:firebase-storage:$FIREBASE_VERSION"
+    compile "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
 }
