--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ BUILD_TOOLS_VERSION=26.0.1
 ANDROID_SUPPORT_VERSION=26.0.2
 WEARABLE_SUPPORT_VERSION=2.0.4
 GLIDE_VERSION=4.0.0
+RETROFIT_VERSION=2.3.0
 
 FIREBASE_VERSION=11.2.2
 GOOGLE_PLAY_SERVICES_VERSION=11.2.2
