convert the ApiUtils into Kotlin singleton

--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     compile project(":api")
     compile project(":encryption")
 
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
+
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
 
