--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,15 @@ dependencies {
     testCompile project(path: ':encryption')
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            details.useVersion ANDROID_SUPPORT_VERSION
+        }
+    }
+}
+
 apply plugin: 'com.google.gms.google-services'
 repositories {
     mavenCentral()
