--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -104,4 +104,13 @@ dependencies {
     compile "com.google.android.support:wearable:${WEARABLE_SUPPORT_VERSION}"
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            details.useVersion ANDROID_SUPPORT_VERSION
+        }
+    }
+}
+
 apply plugin: 'com.google.gms.google-services'
