--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -112,6 +112,7 @@ dependencies {
     compile 'com.klinkerapps:android-transcoder:1.0.1'
     compile 'com.klinkerapps:article_viewer:0.24.1'
     compile 'com.klinkerapps:giphy:1.1.0'
+    compile 'com.klinkerapps:floating-tutorial:1.0.1'
 
     compile 'com.github.apl-devs:appintro:v4.2.0'
     compile 'com.yalantis:ucrop:2.2.0'
