--- a/api/build.gradle
+++ b/api/build.gradle
@@ -22,6 +22,7 @@ sourceCompatibility = '1.7'
 dependencies {
     compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
     compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
     testCompile 'junit:junit:4.12'
 }
