--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -277,7 +277,7 @@
 
         <service android:name=".service.FirebaseTokenUpdateCheckService" />
         <service android:name=".service.FirebaseHandlerService" />
-        <service android:name=".service.NotificationService" />
+        <service android:name=".service.notification.NotificationService" />
         <service android:name=".service.NotificationDismissedService" />
         <service android:name=".service.NotificationMarkReadService" />
         <service android:name=".service.NotificationDeleteService" />
