--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ android {
         }
         release_fast {
             versionNameSuffix "-RELEASE"
+            minifyEnabled false
+            shrinkResources false
             debuggable true
             signingConfig signingConfigs.release
         }
