--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -63,6 +63,8 @@ android {
         }
         release_fast {
             versionNameSuffix "-RELEASE"
+            minifyEnabled false
+            shrinkResources false
             debuggable true
             signingConfig signingConfigs.release
         }
