--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
+# for robolectric resources to not be invalid
+android.enableAapt2=false
+
 VERSION_NAME=2.6.0
 VERSION_CODE=85
 
@@ -22,10 +26,11 @@ COMPILE_SDK=26
 USE_JACK=false
 
 KOTLIN_VERSION=1.1.51
-ANDROID_GRADLE_VERSION=2.3.1
-BUILD_TOOLS_VERSION=26.0.1
+ANDROID_GRADLE_VERSION=3.0.0-rc1
+BUILD_TOOLS_VERSION=26.0.2
 ANDROID_SUPPORT_VERSION=26.1.0
-WEARABLE_SUPPORT_VERSION=2.0.4
+WEARABLE_SUPPORT_VERSION=2.0.5
+ROBOLECTRIC_VERSION=3.4.2
 GLIDE_VERSION=4.0.0
 RETROFIT_VERSION=2.3.0
 
