--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -16,7 +16,6 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
     dexOptions {
@@ -36,6 +35,7 @@ android {
 
     buildTypes {
         release {
+            shrinkResources false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -57,19 +57,24 @@ android {
 }
 
 dependencies {
-    compile project(":api")
-    compile project(":encryption")
+    api project(":api")
+    api project(":encryption")
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
 
-    compile "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
-    compile "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
 
-    compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
+    implementation "com.android.support:design:$ANDROID_SUPPORT_VERSION"
+    implementation "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
 
-    compile "com.google.firebase:firebase-core:$FIREBASE_VERSION"
-    compile "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
-    compile "com.google.firebase:firebase-storage:$FIREBASE_VERSION"
-    compile "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
+    implementation "com.google.firebase:firebase-core:$FIREBASE_VERSION"
+    implementation "com.google.firebase:firebase-storage:$FIREBASE_VERSION"
+    implementation "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
+    api "com.google.firebase:firebase-messaging:$FIREBASE_VERSION"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
+    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
