--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.firebase.firebase-perf'
-apply plugin: 'me.tatarka.retrolambda'
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
@@ -73,11 +72,15 @@ android {
         debug {
             versionNameSuffix "-DEBUG"
             signingConfig signingConfigs.debug
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         staging {
             versionNameSuffix "-STAGING"
             debuggable true
             signingConfig signingConfigs.debug
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release_fast {
             versionNameSuffix "-RELEASE"
@@ -85,12 +88,16 @@ android {
             shrinkResources false
             debuggable true
             signingConfig signingConfigs.release
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
             signingConfig signingConfigs.release
+
+            matchingFallbacks = ['release_fast', 'release']
         }
     }
 
@@ -115,16 +122,13 @@ android {
 }
 
 dependencies {
-    compile project(":shared")
+    api project(":shared")
 
-    annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
-    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
-
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.4.2"
-    testCompile 'org.mockito:mockito-core:2.8.43'
-    testCompile 'org.apache.maven:maven-ant-tasks:2.1.3'
-    testCompile project(path: ':encryption')
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
+    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
+    testImplementation project(path: ':encryption')
 }
 
 configurations.all {
@@ -132,6 +136,8 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             details.useVersion ANDROID_SUPPORT_VERSION
+        } else if (requested.group == 'com.google.firebase') {
+            details.useVersion FIREBASE_VERSION
         }
     }
 }
