--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -16,7 +16,6 @@
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'me.tatarka.retrolambda'
 
 def propsFile = rootProject.file('api_keys.properties')
 def apiKeys = new Properties()
@@ -46,21 +45,29 @@ android {
     buildTypes {
         debug {
             versionNameSuffix "-DEBUG"
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         staging {
             versionNameSuffix "-STAGING"
             debuggable true
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release_fast {
             versionNameSuffix "-RELEASE"
             minifyEnabled false
             shrinkResources false
             debuggable true
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
+
+            matchingFallbacks = ['release_fast', 'release']
         }
     }
 
@@ -84,61 +91,62 @@ android {
 
 dependencies {
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$KOTLIN_VERSION"
 
     //noinspection GradleCompatible
-    compile "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:support-v13:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:support-emoji:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:support-annotations:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:design:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:recyclerview-v7:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:palette-v7:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:preference-v14:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:leanback-v17:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:percent:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:customtabs:$ANDROID_SUPPORT_VERSION"
-    compile "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:appcompat-v7:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:support-v4:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:support-v13:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:support-emoji:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:support-annotations:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:design:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:recyclerview-v7:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:palette-v7:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:preference-v14:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:leanback-v17:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:percent:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:customtabs:$ANDROID_SUPPORT_VERSION"
+    api "com.android.support:exifinterface:$ANDROID_SUPPORT_VERSION"
 
-    compile "com.google.firebase:firebase-perf:$FIREBASE_VERSION"
-    compile "com.google.firebase:firebase-crash:$FIREBASE_VERSION"
-    compile "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES_VERSION"
+    api "com.google.firebase:firebase-perf:$FIREBASE_VERSION"
+    api "com.google.firebase:firebase-crash:$FIREBASE_VERSION"
+    api "com.google.firebase:firebase-auth:$FIREBASE_VERSION"
+    api "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES_VERSION"
 
     annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
-    compile "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    api "com.github.bumptech.glide:glide:$GLIDE_VERSION"
 
-    compile 'com.klinkerapps:android-smsmms:4.2.3'
-    compile 'com.klinkerapps:link_builder:1.5.2'
-    compile 'com.klinkerapps:android-chips:1.2.0@aar'
-    compile 'com.klinkerapps:android-transcoder:1.0.1'
-    compile 'com.klinkerapps:article_viewer:0.24.1'
-    compile 'com.klinkerapps:giphy:1.1.0'
-    compile 'com.klinkerapps:floating-tutorial:1.0.1'
+    api 'com.klinkerapps:android-smsmms:4.2.3'
+    api 'com.klinkerapps:link_builder:1.5.2'
+    api 'com.klinkerapps:android-chips:1.2.0@aar'
+    api 'com.klinkerapps:android-transcoder:1.0.1'
+    api 'com.klinkerapps:article_viewer:0.24.1'
+    api 'com.klinkerapps:giphy:1.1.0'
+    api 'com.klinkerapps:floating-tutorial:1.0.1'
 
-    compile 'com.github.apl-devs:appintro:v4.2.0'
-    compile 'com.yalantis:ucrop:2.2.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.afollestad:sectioned-recyclerview:0.2.3'
-    compile 'com.afollestad:easyvideoplayer:0.3.0'
-    compile 'com.larswerkman:lobsterpicker:1.0.1'
-    compile 'com.github.chrisbanes:PhotoView:1.3.1'
-    compile 'me.leolin:ShortcutBadger:1.1.14@aar'
-    compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
-    compile 'com.github.codekidX:storage-chooser:1.0.30'
-    compile 'com.afollestad.material-dialogs:core:0.9.4.5'
-    compile 'com.roughike:bottom-bar:2.3.1'
+    api 'com.github.apl-devs:appintro:v4.2.0'
+    api 'com.yalantis:ucrop:2.2.0'
+    api 'de.hdodenhof:circleimageview:2.1.0'
+    api 'com.afollestad:sectioned-recyclerview:0.2.3'
+    api 'com.afollestad:easyvideoplayer:0.3.0'
+    api 'com.larswerkman:lobsterpicker:1.0.1'
+    api 'com.github.chrisbanes:PhotoView:1.3.1'
+    api 'me.leolin:ShortcutBadger:1.1.14@aar'
+    api 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    api 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
+    api 'com.github.codekidX:storage-chooser:1.0.30'
+    api 'com.afollestad.material-dialogs:core:0.9.4.5'
+    api 'com.roughike:bottom-bar:2.3.1'
 
-    compile project(":api_implementation")
-    compile project(":encryption")
+    api project(":api_implementation")
+    api project(":encryption")
 
-    compile(name: 'sofa', ext: 'aar')
-    compile(name: 'material-scrollbar', ext: 'aar')
-    compile(name: 'material-camera', ext: 'aar')
+    api(name: 'sofa', ext: 'aar')
+    api(name: 'material-scrollbar', ext: 'aar')
+    api(name: 'material-camera', ext: 'aar')
 
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.4.2"
-    testCompile 'org.mockito:mockito-core:2.8.43'
-    testCompile 'org.apache.maven:maven-ant-tasks:2.1.3'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
+    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
