--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'me.tatarka.retrolambda'
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
@@ -55,11 +54,15 @@ android {
         debug {
             versionNameSuffix "-DEBUG"
             signingConfig signingConfigs.debug
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         staging {
             versionNameSuffix "-STAGING"
             debuggable true
             signingConfig signingConfigs.debug
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release_fast {
             versionNameSuffix "-RELEASE"
@@ -67,12 +70,16 @@ android {
             shrinkResources false
             debuggable true
             signingConfig signingConfigs.release
+
+            matchingFallbacks = ['release_fast', 'release']
         }
         release {
             minifyEnabled false
             shrinkResources false
             //proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
             signingConfig signingConfigs.release
+
+            matchingFallbacks = ['release_fast', 'release']
         }
     }
 
@@ -95,15 +102,20 @@ android {
 }
 
 dependencies {
-    compile project(":shared")
+    implementation project(":shared")
 
     annotationProcessor "com.github.bumptech.glide:compiler:${GLIDE_VERSION}"
-    compile "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
+    implementation "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
 
-    compile 'com.klinkerapps:wearable-reply:1.0.1'
-    compile "com.google.android.gms:play-services-wearable:${GOOGLE_PLAY_SERVICES_VERSION}"
+    implementation 'com.klinkerapps:wearable-reply:1.0.1'
+    implementation "com.google.android.gms:play-services-wearable:${GOOGLE_PLAY_SERVICES_VERSION}"
 
-    compile "com.google.android.support:wearable:${WEARABLE_SUPPORT_VERSION}"
+    implementation "com.google.android.support:wearable:${WEARABLE_SUPPORT_VERSION}"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:$ROBOLECTRIC_VERSION"
+    testImplementation 'org.mockito:mockito-core:2.8.43'
+    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
 
 configurations.all {
@@ -111,6 +123,8 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             details.useVersion ANDROID_SUPPORT_VERSION
+        } else if (requested.group == 'com.google.firebase') {
+            details.useVersion FIREBASE_VERSION
         }
     }
 }
