send basic (text only) messages from the quick share activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -183,6 +183,10 @@
                 <!--<data android:mimeType="video/*" />-->
             <!--</intent-filter>-->
 
+            <!--<meta-data-->
+                <!--android:name="android.service.chooser.chooser_target_service"-->
+                <!--android:value=".shared.service.MessengerChooserTargetService" />-->
+
         </activity>
 
         <activity
